<resources>
    <string name="app_name">Design</string>
    <string name="one_design">one_design</string>
    <string name="FANIS">Fanis</string>
    <string name="one_text_design">one_text_design</string>
    <string name="two_design">two_design</string>
    <string name="tree_design">tree_design</string>
    <string name="two_text_design">two_text_design</string>
    <string name="all_text_design">all_text_design</string>
</resources>