<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/teal_700">

    <TextView
        android:id="@+id/all_design_textView"
        style="@style/Theme.MyApplication.all_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_text_design"
        app:layout_constraintBottom_toTopOf="@+id/one_design"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.838"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.112" />

    <TextView
        android:id="@+id/two_design_textView"
        style="@style/Theme.MyApplication.two_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/two_text_design"
        app:layout_constraintBottom_toTopOf="@+id/one_design"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.855"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.644" />

    <TextView
        android:id="@+id/one_design_textView"
        style="@style/Theme.MyApplication.one_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/one_text_design"
        app:layout_constraintBottom_toTopOf="@+id/one_design"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.412" />

    <Button
        android:id="@+id/one_design"
        style="@style/Theme.MyApplication.one_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/one_design"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <Button
        android:id="@+id/two_design"
        style="@style/Theme.MyApplication.two_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/two_design"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.207"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.658" />

    <Button
        android:id="@+id/tree_design"
        style="@style/Theme.MyApplication.tree_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tree_design"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.808"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.841" />

</androidx.constraintlayout.widget.ConstraintLayout>